--- a/walk.ipynb
+++ b/walk.ipynb
@@ -1306,3 +1306,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+	   "visualize!(vis, nlp, Z_sol)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.5.3",
+   "language": "julia",
+   "name": "julia-1.5"
+  },
+  "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.5.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
